src/test/minic/success/inner_scope_redecl_diff_type.block
test03 {
   // No error: double declaration in a sub-block with a different type.
   int i = 1 ;
   if (true) {
      boolean i = true;
   }
}