src/test/minic/error/inner_scope_type_mismatch.block
test19 {
   // Type error: Using a variable with another type in a sub-block.
   int i = 1 ;
   while (true) {
      boolean p = i;
   }
}